# zebra-ambiata

./: .gitignore  .gitmodules  README.md  boris-git.toml  boris.toml  master.toml  zebra.cabal  zebra.lock-7.10.2  zebra.mk
csrc/: zebra_append.c  zebra_append.h  zebra_bindings.h  zebra_block_split.c  zebra_clone.c  zebra_clone.h  zebra_data.c  zebra_data.h  zebra_debug.h  zebra_grow.c  zebra_grow.h  zebra_hash.h  zebra_merge.c  zebra_merge.h  zebra_merge_many.c  zebra_merge_many.h  zebra_unpack.c  zebra_unpack.h
doc/: zebra-v2-plan.md
framework/: mafia
main/: debug.hs  zebra.hs
src/: Zebra.hs
src/Zebra/: Array.hs  Data.hs  Encoding.hs  Fact.hs  Foreign.hsc  Header.hs  Schema.hs  Segment.hs  Serial.hs  Table.hs  Value.hs
src/Zebra/Data/: Block.hs  Core.hs  Encoding.hs  Entity.hs  Fact.hs  Index.hs  Record.hs  Schema.hs  Table.hs
src/Zebra/Foreign/: Bindings.hsc  Block.hs  Entity.hs  Merge.hs  Serial.hs  Table.hs  Util.hs
src/Zebra/Merge/: Base.hs  Block.hs  BlockC.hs  Entity.hs  Puller.hs
src/Zebra/Serial/: Array.hs  Block.hs  File.hs  Header.hs
src/Zebra/Table/: Mutable.hs
test/: test.hs  zebra-test.cabal
test/Jack/Zebra/: Fact.hs  Schema.hs
test/Test/Zebra/: Array.hs  Header.hs  Jack.hs  Schema.hs  Table.hs  (+1 more)
zebra-cli/: .mafiaignore  ambiata-zebra-cli.cabal  ambiata-zebra-cli.lock-7.10.3  ambiata-zebra-cli.lock-8.0.1  ambiata-zebra-cli.lock-8.0.2  master.toml  zebra-cli.cabal  zebra-cli.lock-7.10.2  zebra-cli.lock-8.0.1
zebra-cli/main/: zebra.hs
zebra-cli/src/Zebra/: Command.hs
zebra-cli/src/Zebra/Command/: Adapt.hs  Consistency.hs  Export.hs  Import.hs  Merge.hs  Summary.hs  Util.hs
zebra-cli/test/: test-cli.hs
zebra-cli/test/cli/import/: run
zebra-cli/test/cli/import/t01-array/: expected  input.zschema  input.ztxt  script
zebra-cli/test/cli/import/t02-map/: expected  input.zschema  input.ztxt
zebra-cli/test/cli/import/t03-binary/: expected  input.zschema  input.ztxt  script
zebra-cli/test/cli/import/t04-time/: expected  input.zschema  input.ztxt
zebra-cli/test/cli/merge/: run
zebra-cli/test/cli/merge/t01-same/: expected  input.zschema  input0.ztxt  input1.ztxt  script
zebra-cli/test/cli/merge/t02-different/: expected  input0.zschema  input0.ztxt  input1.zschema  input1.ztxt  script
zebra-core/: .mafiaignore  ambiata-zebra-core.cabal  ambiata-zebra-core.lock-7.10.3  ambiata-zebra-core.lock-8.0.2  master.toml  zebra-core.cabal  zebra-core.lock-7.10.2  zebra-core.lock-8.0.1  zebra-core.mk
zebra-core/csrc/: zebra_append.c  zebra_block_split.c  zebra_block_split.h  zebra_clone.c  zebra_clone.h  zebra_data.h  zebra_grow.h  zebra_hash.h  zebra_merge_many.h  zebra_unpack.c  zebra_unpack.h
zebra-core/main/: zebra.hs
zebra-core/src/Neutron/: Unsafe.hs
zebra-core/src/Neutron/Vector/: Boxed.hs  Cons.hs  Generic.hs  Storable.hs
zebra-core/src/Neutron/Vector/Generic/: Mutable.hs
zebra-core/src/Zebra/: Binary.hs  ByteStream.hs  JSON.hs  Json.hs  Schema.hs  Stream.hs  Table.hs  Text.hs  Time.hs  Value.hs
zebra-core/src/Zebra/Binary/: Array.hs  Block.hs  Data.hs  File.hs  Header.hs  Table.hs
zebra-core/src/Zebra/ByteStream/: Char8.hs
zebra-core/src/Zebra/Data/: Block.hs  Core.hs  Entity.hs  Fact.hs
zebra-core/src/Zebra/Data/Block/: Entity.hs  Table.hs
zebra-core/src/Zebra/Data/Vector/: Generic.hs  Storable.hs
zebra-core/src/Zebra/Factset/: Block.hs  Data.hs  Entity.hs  Fact.hs  Table.hs
zebra-core/src/Zebra/Factset/Block/: Block.hs  Entity.hs  Index.hs
zebra-core/src/Zebra/Foreign/: Bindings.hsc  Block.hs  Entity.hs  Merge.hs  Table.hs  Util.hs
zebra-core/src/Zebra/JSON/: Schema.hs
zebra-core/src/Zebra/Json/: Codec.hs  Schema.hs  Table.hs  Value.hs
zebra-core/src/Zebra/Merge/: Base.hs  Block.hs  BlockC.hs  Entity.hs  Mutable.hs  Table.hs
zebra-core/src/Zebra/Merge/Puller/: File.hs  List.hs
zebra-core/src/Zebra/Serial/: Array.hs  Binary.hs  Header.hs  Json.hs  Table.hs  Text.hs
zebra-core/src/Zebra/Serial/Binary/: Array.hs  Block.hs  Data.hs  File.hs  Header.hs  Logical.hs  Striped.hs  Table.hs
zebra-core/src/Zebra/Serial/Json/: Logical.hs  Schema.hs  Striped.hs  Util.hs
zebra-core/src/Zebra/Serial/Text/: Logical.hs  Schema.hs  Striped.hs
zebra-core/src/Zebra/Stream/: Get.hs
zebra-core/src/Zebra/Table/: Data.hs  Encoding.hs  Logical.hs  Mutable.hs  Schema.hs  Striped.hs
zebra-core/src/Zebra/Text/: Schema.hs  Table.hs  Value.hs
zebra-core/src/Zebra/X/: ByteStream.hs  Either.hs  Stream.hs
zebra-core/src/Zebra/X/ByteStream/: Char8.hs
zebra-core/src/Zebra/X/Stream/: Get.hs
zebra-core/src/Zebra/X/Vector/: Cons.hs  Generic.hs  Segment.hs  Storable.hs
zebra-core/test/: ambiata-zebra-core-test.cabal  test.hs  zebra-core-test.cabal
zebra-core/test/Test/Zebra/: Jack.hs  Schema.hs  Table.hs  Time.hs  Util.hs  Value.hs
zebra-core/test/Test/Zebra/Binary/: Array.hs  Block.hs  File.hs  Header.hs  Table.hs
zebra-core/test/Test/Zebra/Data/: Block.hs  Core.hs
zebra-core/test/Test/Zebra/Factset/: Block.hs  Data.hs
zebra-core/test/Test/Zebra/Foreign/: Block.hs  Merge.hs  Table.hs
zebra-core/test/Test/Zebra/JSON/: Schema.hs
zebra-core/test/Test/Zebra/Json/: Codec.hs  Schema.hs  Table.hs  Value.hs
zebra-core/test/Test/Zebra/Merge/: Entity.hs  Table.hs
zebra-core/test/Test/Zebra/Serial/: Array.hs  Block.hs  File.hs  Header.hs  Table.hs
zebra-core/test/Test/Zebra/Serial/Binary/: Array.hs  Block.hs  File.hs  Header.hs  Logical.hs  Striped.hs  Table.hs
zebra-core/test/Test/Zebra/Serial/Json/: Logical.hs  Schema.hs  Striped.hs  Util.hs
zebra-core/test/Test/Zebra/Serial/Text/: Logical.hs  Schema.hs  Striped.hs
zebra-core/test/Test/Zebra/Table/: Logical.hs  Schema.hs  Striped.hs
zebra-core/test/Test/Zebra/Text/: Schema.hs  Table.hs  Value.hs
zebra-factset/: zebra-factset.cabal  zebra-factset.lock-7.10.2
zebra-factset/src/Zebra/Factset/: Data.hs  Entity.hs  Table.hs
zebra-factset/src/Zebra/Factset/Block/: Block.hs  Entity.hs  Index.hs
zebra-factset/test/: test.hs
zebra-factset/test/Test/Zebra/: JackFactsets.hs
zebra-factset/test/Test/Zebra/Factset/: Block.hs  Data.hs  Jack.hs
(+29 files in other folders)
