name:                  ambiata-zebra
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           zebra

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-bytestring
                    , ambiata-x-eithert
                    , ambiata-x-show
                    , ambiata-x-vector
                    , attoparsec                      >= 0.13       && < 0.14
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , hashable                        == 1.2.*
                    , lens                            >= 4.7        && < 4.15
                    , mtl                             == 2.2.*
                    , primitive                       == 0.6.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , vector                          >= 0.10       && < 0.12
                    , vector-space                    == 0.10.*
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra
                    Zebra.Data
                    Zebra.Data.Block
                    Zebra.Data.Encoding
                    Zebra.Data.Entity
                    Zebra.Data.Fact
                    Zebra.Data.Index
                    Zebra.Data.Record
                    Zebra.Data.Schema
                    Zebra.Serial
                    Zebra.Serial.Array
                    Zebra.Serial.Block
                    Zebra.Serial.Header

executable zebra
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/zebra.hs

  build-depends:
                      base
                    , ambiata-zebra
                    , ambiata-p
                    , ambiata-x-optparse
                    , optparse-applicative            == 0.12.*
                    , text                            == 1.2.*


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-zebra
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , vector                          >= 0.10       && < 0.12

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-zebra
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , text
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-zebra
