name:                  ambiata-zebra
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           zebra

flag LessCcOpt
  Description: Avoid a gcc-6 optimizer bug when using -O3
  Default:     False

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-snapper
                    , ambiata-x-bytestring
                    , ambiata-x-eithert
                    , ambiata-x-show
                    , ambiata-x-vector
                    , attoparsec                      >= 0.13       && < 0.14
                    , binary                          >= 0.7.2      && < 0.9
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.23
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , lens                            >= 4.7        && < 4.15
                    , mtl                             == 2.2.*
                    , old-locale                      == 1.0.*
                    , pretty-show                     == 1.6.*
                    , primitive                       == 0.6.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    == 0.5.*
                    , vector                          >= 0.10       && < 0.12
                    , vector-space                    == 0.10.*
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra

                    Zebra.Data
                    Zebra.Data.Block
                    Zebra.Data.Block.Block
                    Zebra.Data.Block.Entity
                    Zebra.Data.Block.Index
                    Zebra.Data.Core
                    Zebra.Data.Encoding
                    Zebra.Data.Entity
                    Zebra.Data.Fact
                    Zebra.Data.Schema
                    Zebra.Data.Table
                    Zebra.Data.Table.Mutable

                    Zebra.Foreign.Bindings
                    Zebra.Foreign.Block
                    Zebra.Foreign.Entity
                    Zebra.Foreign.Merge
                    Zebra.Foreign.Serial
                    Zebra.Foreign.Table
                    Zebra.Foreign.Util

                    Zebra.Merge.Base
                    Zebra.Merge.Block
                    Zebra.Merge.BlockC
                    Zebra.Merge.Entity
                    Zebra.Merge.Puller.File
                    Zebra.Merge.Puller.List

                    Zebra.Serial
                    Zebra.Serial.Array
                    Zebra.Serial.Block
                    Zebra.Serial.File
                    Zebra.Serial.Header

  include-dirs:
                       csrc

  install-includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h

  includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h


  c-sources:
                       csrc/zebra_append.c
                       csrc/zebra_block_split.c
                       csrc/zebra_clone.c
                       csrc/zebra_data.c
                       csrc/zebra_grow.c
                       csrc/zebra_merge.c
                       csrc/zebra_merge_many.c
                       csrc/zebra_unpack.c

  if flag(LessCcOpt)
    cc-options:        -std=c99 -O2 -g -msse4.2 -Wall -Werror -Wuninitialized -DCABAL=1
  else
    cc-options:        -std=c99 -O3 -g -msse4.2 -Wall -Werror -Wuninitialized -DCABAL=1

executable zebra
  if impl(ghc >= 8.0)
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m"
  else
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m -qg"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/zebra.hs

  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-zebra
                    , ambiata-p
                    , ambiata-x-optparse
                    , ambiata-x-vector
                    , ambiata-x-eithert
                    , optparse-applicative            == 0.12.*
                    , text
                    , pretty-show
                    , binary
                    , containers
                    , bytestring
                    , transformers


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , pretty-show                     == 1.6.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    == 0.5.*
                    , vector                          >= 0.10       && < 0.12

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-zebra
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , text
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-zebra
