name:                  ambiata-zebra-cli
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           zebra

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , mmorph                          == 1.0.*
                    , pretty-show                     == 1.6.*
                    , resourcet                       == 1.1.*
                    , semigroups                      == 0.18.*
                    , text                            == 1.2.*
                    , transformers                    == 0.5.*
                    , concurrent-output               >= 1.6        && < 1.11
                    , vector                          >= 0.10       && < 0.12

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra.Command
                    Zebra.Command.Adapt
                    Zebra.Command.Export
                    Zebra.Command.Import
                    Zebra.Command.Merge
                    Zebra.Command.Summary
                    Zebra.Command.Util

executable zebra
  if impl(ghc >= 8.0)
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m"
  else
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m -qg"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/zebra.hs

  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , ambiata-x-vector
                    , ambiata-zebra-cli
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , mmorph                          == 1.0.*
                    , optparse-applicative            >= 0.12       && < 0.14
                    , pretty-show                     == 1.6.*
                    , resourcet                       == 1.1.*
                    , semigroups                      == 0.18.*
                    , text                            == 1.2.*
                    , transformers                    == 0.5.*

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
