name:                  ambiata-zebra-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           zebra

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-snapper
                    , ambiata-viking
                    , ambiata-x-bytestring
                    , ambiata-x-eithert
                    , ambiata-x-show
                    , ambiata-x-vector
                    , aeson                           >= 1.0        && < 1.2
                    , aeson-pretty                    == 0.8.*
                    , attoparsec                      >= 0.13       && < 0.14
                    , base64-bytestring               == 1.0.*
                    , bifunctors                      >= 4.2        && < 5.5
                    , binary                          >= 0.7.2      && < 0.9
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.23
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , exceptions                      >= 0.6        && < 0.9
                    , ghc-prim                        >= 0.4        && < 0.6
                    , lens                            >= 4.7        && < 4.15
                    , mmorph                          == 1.0.*
                    , mtl                             == 2.2.*
                    , old-locale                      == 1.0.*
                    , pretty-show                     == 1.6.*
                    , primitive                       == 0.6.*
                    , random                          == 1.1.*
                    , resourcet                       == 1.1.*
                    , semigroups                      == 0.18.*
                    , streaming                       == 0.1.*
                    , streaming-bytestring            == 0.1.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    == 0.5.*
                    , unordered-containers            == 0.2.*
                    , vector                          >= 0.10       && < 0.12
                    , vector-space                    == 0.10.*
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra.Factset.Block
                    Zebra.Factset.Block.Block
                    Zebra.Factset.Block.Entity
                    Zebra.Factset.Block.Index
                    Zebra.Factset.Data
                    Zebra.Factset.Entity
                    Zebra.Factset.Fact
                    Zebra.Factset.Table

                    Zebra.Foreign.Bindings
                    Zebra.Foreign.Block
                    Zebra.Foreign.Entity
                    Zebra.Foreign.Merge
                    Zebra.Foreign.Serial
                    Zebra.Foreign.Table
                    Zebra.Foreign.Util

                    Zebra.Merge.Base
                    Zebra.Merge.Block
                    Zebra.Merge.BlockC
                    Zebra.Merge.Entity
                    Zebra.Merge.Puller.File
                    Zebra.Merge.Puller.List
                    Zebra.Merge.Table

                    Zebra.Serial.Binary
                    Zebra.Serial.Binary.Array
                    Zebra.Serial.Binary.Block
                    Zebra.Serial.Binary.Data
                    Zebra.Serial.Binary.File
                    Zebra.Serial.Binary.Header
                    Zebra.Serial.Binary.Logical
                    Zebra.Serial.Binary.Striped
                    Zebra.Serial.Binary.Table

                    Zebra.Serial.Json
                    Zebra.Serial.Json.Logical
                    Zebra.Serial.Json.Schema
                    Zebra.Serial.Json.Striped
                    Zebra.Serial.Json.Util

                    Zebra.Serial.Text
                    Zebra.Serial.Text.Logical
                    Zebra.Serial.Text.Schema
                    Zebra.Serial.Text.Striped

                    Zebra.Table.Data
                    Zebra.Table.Encoding
                    Zebra.Table.Logical
                    Zebra.Table.Schema
                    Zebra.Table.Striped

                    Zebra.Time

                    Zebra.X.Vector.Generic
                    Zebra.X.Vector.Segment
                    Zebra.X.Vector.Storable

  include-dirs:
                       csrc

  install-includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h

  includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h


  c-sources:
                       csrc/zebra_append.c
                       csrc/zebra_block_split.c
                       csrc/zebra_clone.c
                       csrc/zebra_grow.c
                       csrc/zebra_merge.c
                       csrc/zebra_merge_many.c
                       csrc/zebra_unpack.c

  cc-options:
                       -std=c99 -O3 -ggdb -msse4.2 -Wall -Werror -Wuninitialized -DCABAL=1

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , pretty-show                     == 1.6.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , semigroups                      == 0.18.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , time                            >= 1.5        && < 1.9
                    , transformers                    == 0.5.*
                    , vector                          >= 0.10       && < 0.12

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-zebra-core
                    , text
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
