name:                  ambiata-zebra-core-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary
                    , bytestring
                    , containers
                    , exceptions
                    , pretty-show
                    , QuickCheck
                    , quickcheck-instances
                    , text
                    , thyme
                    , transformers
                    , vector

  exposed-modules:
                    Test.Zebra.Jack
