name:                  ambiata-zebra-core-test
version:               0.1.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , pretty-show                     == 1.6.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    == 0.5.*
                    , vector                          >= 0.10       && < 0.12

  exposed-modules:
                    Test.Zebra.Jack
